@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="xp-framework-validate" basedir="." xmlns:select="antlib:org.apache.tools.ant.types.resources.selectors">
-  <target name="xp.validate" extensionOf="validate">
+  <target name="xp.validate.php" extensionOf="validate">
     <apply
      executable="php"
      failonerror="true"
@@ -10,6 +10,16 @@
         <fileset refid="build.sources.fileset.php"/>
         <select:name name="*.php"/>
       </restrict>
+    </apply>
+  </target>
+
+  <target name="xp.validate.xsl" extensionOf="validate">
+    <apply
+     executable="xmllint"
+     failonerror="true"
+    >
+      <arg value="-noout"/>
+      <fileset refid="build.sources.fileset.xsl"/>
     </apply>
   </target>
 </project>
